--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@aws-cdk/assert": "^1.18.0",
     "@types/jest": "^24.0.22",
     "@types/node": "10.17.5",
+    "aws-cdk": "^1.18.0",
     "jest": "^24.9.0",
     "ts-jest": "^24.1.0",
-    "aws-cdk": "^1.18.0",
     "ts-node": "^8.1.0",
     "typescript": "~3.7.2"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigateway": "^1.20.0",
+    "@aws-cdk/aws-dynamodb": "^1.20.0",
+    "@aws-cdk/aws-lambda": "^1.20.0",
     "@aws-cdk/core": "^1.18.0",
     "source-map-support": "^0.5.16"
   }
